[Android O] Include notification settings in site settings count

- Previously only content settings provided by the PrefProvider were
counted when calculating the number of sites that would be affected
by clearing site settings.

- This change means we also count settings provided by the
NotificationChannelsAndroidProvider, because these settings will also
be cleared.

Bug: 762515
Change-Id: Ibc4265f7553a4ee6d79375fc292d5382eaa8376d
Reviewed-on: https://chromium-review.googlesource.com/652807
Commit-Queue: Anita Woodruff <awdf@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500010}
Former-commit-id: fdd3055f7ff31a304428c5194871eca12a14a950